Changes for test cases failure.