@@ -16,6 +16,8 @@
         <skip.assemblyxml>true</skip.assemblyxml>
         <ignite.version>2.13.0</ignite.version>
         <calcite.version>1.25.0</calcite.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -470,7 +472,7 @@
                             <release>17</release>
                             <source>17</source>
                             <target>17</target>
-                            <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                            <forceJavacCompilerUse>false</forceJavacCompilerUse>
                         </configuration>
                         <executions>
                             <execution>
@@ -489,7 +491,16 @@
                             <testFailureIgnore>true</testFailureIgnore>
                             <forkCount>3</forkCount>
                             <reuseForks>true</reuseForks>
-                            <argLine>@{jacocoArgLine} --enable-preview</argLine>
+                            <argLine>
+                            	-Xms4g -Xmx4g
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                                --add-opens java.base/java.nio=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                                --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                -Djava.net.preferIPv4Stack=true
+                                -Dcom.sun.management.jmxremote=false
+                            </argLine>
                             <excludes>
                                 <exclude>**/*Test.java</exclude>
                                 <exclude>**/*TestSuite2.java</exclude>
